k8s/manifests/vaultwarden/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vw.greedo.net`)
      kind: Rule
      services:
        - name: vaultwarden
          port: 80
  tls: {}
